# deviceidpy

./: README.md  pyproject.toml
src/deviceid/: __init__.py  _store.py  deviceid.py  store.py
test/: test_device_id_linux.py  test_device_id_windows.py
